Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 6.0.0-rc1
-
Fix Version/s: Qt Creator 6.0.0
-
Component/s: C/C++/Obj-C++ Support
-
Labels:None
-
Platform/s:
-
Commits:f4070c4b43da876a79faff2aeaa35f404caf4ff5 (qt-creator/qt-creator/6.0)
Description
clangd doesn't remove cached data for files deleted while it was disabled.
Steps to reproduce:
- Enable clangd in options
- Create new project with main.cpp and OtherClass.h, or clone https://github.com/VolodymyrZibarov/clangdRenameBug.git and open it
- Find References in OtherClass.h for member "value". It shows 2 files: main.cpp and OtherClass.h, as expected.
- Disable CLangd in options
- Rename file OtherClass.h to OtherClass2.h, class name remains unchanged.
- Enable CLangd in options
- Find References in OtherClass2.h for member "value".
Expected result:
2 files in results list
Actual result:
3 files in results list, including OtherClass.h, that was renamed:
Attachments
For Gerrit Dashboard: QTCREATORBUG-26574 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
382234,2 | ClangCodeModel: Do not report symbol references from non-existing files | 6.0 | qt-creator/qt-creator | Status: MERGED | -1 | 0 |